Flex row and column prototypes

--- a/scss/_prototypes.scss
+++ b/scss/_prototypes.scss
@@ -149,6 +149,14 @@
     @include flex(column, center, center, 0);
 }
 
+%flex-column {
+    @include flex-column(space-between, center);
+}
+
+%flex-row {
+    @include flex-row(space-between, center);
+}
+
 %box {
     @extend %shadow-1;
     @extend %flex;
