--- a/scss/elements/_links.scss
+++ b/scss/elements/_links.scss
@@ -3,21 +3,8 @@
 @use '../variables';
 @use '../prototypes';
 
-%link {
-    @extend .inline-box;
-    @extend .gradient-hover-animation;
-    @extend %clickable;
-    padding: 0.25em;
-    text-align: center;
-    text-decoration: none;
-
-    &:hover {
-        text-decoration: none;
-    }
-}
-
 .link-row {
-    @extend .flex;
+    @extend %flex;
 
     > * {
         @extend %margin-horizontal-1;
@@ -25,7 +12,7 @@
 }
 
 .link-row-group {
-    @extend .flex-row;
+    @extend %flex-row;
 }
 
 .link {
