--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6,52 +6,8 @@
   margin: 0.5em;
 }
 
-.background, .z-1 {
+.background {
   z-index: -1;
-}
-
-.z0 {
-  z-index: 0;
-}
-
-.z1 {
-  z-index: 1;
-}
-
-.z2 {
-  z-index: 2;
-}
-
-.z3 {
-  z-index: 3;
-}
-
-.z4 {
-  z-index: 4;
-}
-
-.z5 {
-  z-index: 5;
-}
-
-.z6 {
-  z-index: 6;
-}
-
-.z7 {
-  z-index: 7;
-}
-
-.z8 {
-  z-index: 8;
-}
-
-.z9 {
-  z-index: 9;
-}
-
-.z10 {
-  z-index: 10;
 }
 
 .form {
@@ -83,56 +39,12 @@
   width: 100%;
 }
 
-.flex-grow-0 {
-  flex-grow: 0;
-}
-
-.flex-grow-1 {
-  flex-grow: 1;
-}
-
 .form, .image, .box, .default.box, .dark.box, .link, .default.link, .dark.link, .inline-box, .default.inline-box, .dark.inline-box {
   box-shadow: gray 0px 0px 3px 0px;
 }
 
-.flex-grow-2 {
-  flex-grow: 2;
-}
-
-.flex-grow-3 {
-  flex-grow: 3;
-}
-
 .banner, .button, .button-round-1, .button-round-2, .button-round-3 {
   box-shadow: gray 0px 0px 5px 0px;
-}
-
-.flex-grow-4 {
-  flex-grow: 4;
-}
-
-.flex-grow-5 {
-  flex-grow: 5;
-}
-
-.flex-grow-6 {
-  flex-grow: 6;
-}
-
-.flex-grow-7 {
-  flex-grow: 7;
-}
-
-.flex-grow-8 {
-  flex-grow: 8;
-}
-
-.flex-grow-9 {
-  flex-grow: 9;
-}
-
-.flex-grow-10 {
-  flex-grow: 10;
 }
 
 .scroll-handle, .link, .default.link, .dark.link, .button, .button-round-1, .button-round-2, .button-round-3 {
@@ -1779,6 +1691,98 @@
   align-items: flex-end;
   flex-grow: 1;
   width: 100%;
+}
+
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+.flex-grow-2 {
+  flex-grow: 2;
+}
+
+.flex-grow-3 {
+  flex-grow: 3;
+}
+
+.flex-grow-4 {
+  flex-grow: 4;
+}
+
+.flex-grow-5 {
+  flex-grow: 5;
+}
+
+.flex-grow-6 {
+  flex-grow: 6;
+}
+
+.flex-grow-7 {
+  flex-grow: 7;
+}
+
+.flex-grow-8 {
+  flex-grow: 8;
+}
+
+.flex-grow-9 {
+  flex-grow: 9;
+}
+
+.flex-grow-10 {
+  flex-grow: 10;
+}
+
+.z-1 {
+  z-index: -1;
+}
+
+.z0 {
+  z-index: 0;
+}
+
+.z1 {
+  z-index: 1;
+}
+
+.z2 {
+  z-index: 2;
+}
+
+.z3 {
+  z-index: 3;
+}
+
+.z4 {
+  z-index: 4;
+}
+
+.z5 {
+  z-index: 5;
+}
+
+.z6 {
+  z-index: 6;
+}
+
+.z7 {
+  z-index: 7;
+}
+
+.z8 {
+  z-index: 8;
+}
+
+.z9 {
+  z-index: 9;
+}
+
+.z10 {
+  z-index: 10;
 }
 
 body, div, p, span, a, .text, .link {
